Initial commit for Java and Spring Upgrade